k8s/course-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: course

spec:
  replicas: 2

  selector:
    matchLabels:
      app: course

  template:
    metadata:
      labels:
        app: course

    spec:
      containers:
      - name: course
        image: bkuslapur/course:v2

        ports:
        - containerPort: 5002

---
apiVersion: v1
kind: Service

metadata:
  name: course-service

spec:
  selector:
    app: course

  ports:
  - port: 80
    targetPort: 5002
