k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
      - name: postgres
        image: postgres:16

---
apiVersion: v1
kind: Service

metadata:
  name: postgres-service

spec:
  selector:
    app: postgres

  ports:
  - port: 5432
