k8s/result-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: result

spec:
  replicas: 2

  selector:
    matchLabels:
      app: result

  template:
    metadata:
      labels:
        app: result

    spec:
      containers:
      - name: result
        image: bkuslapur/result:v1

        ports:
        - containerPort: 5003

---
apiVersion: v1
kind: Service

metadata:
  name: result-service

spec:
  selector:
    app: result

  ports:
  - port: 80
    targetPort: 5003
