k8s/student-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: student

spec:
  replicas: 2

  selector:
    matchLabels:
      app: student

  template:
    metadata:
      labels:
        app: student

    spec:
      containers:
      - name: student
        image: bkuslapur/student:v1

        ports:
        - containerPort: 5001

---
apiVersion: v1
kind: Service

metadata:
  name: student-service

spec:
  selector:
    app: student

  ports:
  - port: 80
    targetPort: 5001
