k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: school-ingress

spec:
  ingressClassName: nginx

  rules:

  - http:
      paths:

      - path: /students
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 80

      - path: /courses
        pathType: Prefix
        backend:
          service:
            name: course-service
            port:
              number: 80

      - path: /results
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 80
